<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_login"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_company_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/text_hint_username"
        app:layout_constraintTop_toBottomOf="@+id/iv_company_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/til_username"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        android:hint="@string/text_hint_password"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <LinearLayout
        android:id="@+id/btn_gmail_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_button_sso"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintEnd_toStartOf="@id/btn_fb_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_gmail"/>

        <TextView
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_gmail"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_fb_login"
        android:layout_marginStart="8dp"
        android:layout_width="0dp"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_button_sso"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/btn_gmail_login"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintTop_toTopOf="@id/btn_gmail_login">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_facebook"/>

        <TextView
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_facebook"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>